--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.4.1",
+    "iscroll": "^5.2.0",
     "jquery": "^3.4.1",
+    "jquery-drawer": "^3.2.2",
     "popper.js": "^1.16.1",
     "slick-carousel": "^1.8.1"
   },
