--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jquery": "^3.4.1",
     "jquery-drawer": "^3.2.2",
     "popper.js": "^1.16.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^5.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
